<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SydExplore</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_attraction_info">ViewAttractionInfo</string>
    <string name="action_settings">Settings</string>
	<string name="All">All</string>
	<string name="Adventurous">Adventurous</string>
	<string name="Cultural">Cultural</string>
	<string name="Education">Education</string>
	<string name="Fun">Fun</string>
		<string name="Historical">Historical</string>
	<string name="Hungry">Hungry</string>
	<string name="Lazy">Lazy</string>
	<string name="Luxurious">Luxurious</string>
	<string name="Natural">Natural</string>
	<string name="Social">Social</string>

</resources>

