<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/All"
          android:icon="@drawable/international12"
          android:title="@string/All"/>
    
    <item android:id="@+id/Adventurous"
          android:icon="@drawable/trekking"
          android:title="@string/Adventurous" />
    
    <item android:id="@+id/Cultural"
          android:icon="@drawable/greek1" 
          android:title="@string/Cultural"/>
        
    <item android:id="@+id/Education"
          android:icon="@drawable/books30"
          android:title="@string/Education" />
            
    <item android:id="@+id/Historical"
          android:icon="@drawable/time12"
          android:title="@string/Historical" />
                
    <item android:id="@+id/Hungry"
          android:icon="@drawable/plate7" 
          android:title="@string/Hungry"/>
                    
    <item android:id="@+id/Lazy"
          android:icon="@drawable/man271" 
          android:title="@string/Lazy"/>
                        
    <item android:id="@+id/Luxurious"
          android:icon="@drawable/banknotes" 
          android:title="@string/Luxurious"/>
    
    <item android:id="@+id/Natural"
          android:icon="@drawable/tree101" 
          android:title="@string/Natural"/>
    
    <item android:id="@+id/Social"
          android:icon="@drawable/party1" 
          android:title="@string/Social"/>
   
</menu>
